{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 67,
  "lineage": "9d4ece02-4ec5-aa6b-8504-3807441d74ce",
  "resources": [
    {
      "module": "module.gke_cluster",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/flowing-elf-306402/global/networks/gke-demo",
            "mtu": 0,
            "name": "gke-demo",
            "project": "flowing-elf-306402",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flowing-elf-306402/global/networks/gke-demo"
          }
        }
      ]
    },
    {
      "module": "module.gke_network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google"
    }
  ]
}